# frspr_test

./: .gitignore  README.md  pyproject.toml  setup.cfg
docker/: .env  Dockerfile  docker-compose.yml
migrations/: alembic.ini  alembic_test.ini
migrations/versions/: 9a3a60f63098_create_tables.py
src/phone_book/: __init__.py  database.py  exceptions.py  models.py  utils.py
src/phone_book/phones/: __init__.py  aggregates.py  models.py  repositories.py  services.py  views.py
src/phone_book/settings/: __init__.py  debug.py
src/tests/: conftest.py  test_phones.py
