[tool.poetry]
name = "phone_book"
version = "1.0.0"
description = "Phone book test project"
authors = [
    "Sergei Krachkovsky sergei.krachkovsky@hotmail.com"
]

[tool.poetry.dependencies]
python = "~3.9.6"
aiopg = "^1.3.1"
alembic = "^1.6.5"
deal = "^4.7.2"
fastapi = "^0.66.1"
httpx = "^0.18.2"
pydantic = "^1.8.2"
requests = "^2.26.0"
SQLAlchemy = "^1.4.21"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-alembic = "^0.3.1"
pytest-asyncio = "^0.15.1"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/tests",
]